<resources>
    <string name="app_name">Novoda @ Liverpool MakeFest!</string>
    <string name="new_game">New Game</string>
    <string name="highscores">Highscores</string>
    <string name="simon_says">Play now to enter the competition! &#127881; &#127881; &#127881;</string>
    <string name="made_with_heart_by_novoda">Made with &#129302; by Novoda</string>
    <string name="a">1</string>
    <string name="b">2</string>
    <string name="c">3</string>
    <string name="d">4</string>
    <string name="score_x">Score: %1$d</string>
    <string name="your_score_was_x">Your score was %1$s</string>
    <string name="highscore_is_x">Highscore is %1$s</string>
    <string name="congratulations_you_got_the_new_highscore">Congratulations you got the new highscore!</string>
    <string name="ready_to_start_3_2_1">Ready to start? 3 .. 2 .. 1</string>
    <string name="moving_to_next_level">NICE. Moving to the next level!</string>
    <string name="incorrect_key">%s, is incorrect :-(</string>
    <string name="aw_yes">%s, yes!</string>
</resources>
